fix z-index

--- a/src/scss/modules/tabletop_cardinfobox.scss
+++ b/src/scss/modules/tabletop_cardinfobox.scss
@@ -2,6 +2,7 @@
     position: fixed;
     left: 100px;
     top: 100px;
+    z-index: 1001;
 
     &.card-infobox-hidden {
         display: none;
